HDFS-17874. Followup: Fix java8 and a typo in the test case (#8238)
This is part of the branch-3.4 backport of #8196